--- a/.github/workflows/activate.yml
+++ b/.github/workflows/activate.yml
@@ -10,7 +10,9 @@ jobs:
       - name: Request manual activation file
         id: getManualLicenseFile
         uses: game-ci/unity-request-activation-file@v2
-      # Upload artifact (Unity_v20XX.X.XXXX.alf)
+        with: 
+          unityVersion: "2020.3.22f1"
+        # Upload artifact (Unity_v20XX.X.XXXX.alf)
       - name: Expose as artifact
         uses: actions/upload-artifact@v2
         with:
