--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,44 +1,136 @@
-name: deploy 😎
+name: Deploy 🧱
 
-on: [push, pull_request]
+on:
+  pull_request: {}
+  push: { branches: [master] }
+
+env:
+  UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
 
 jobs:
   build:
-    name: Build my project ✨
+    name: Build for ${{ matrix.targetPlatform }} on version ${{ matrix.unityVersion }}
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        projectPath:
+        - ./
+        unityVersion:
+          - 2020.3.22f1
+        targetPlatform:
+          - StandaloneOSX # Build a macOS standalone (Intel 64-bit).
+          - StandaloneWindows64 # Build a Windows 64-bit standalone.
+          - StandaloneLinux64 # Build a Linux 64-bit standalone.
+          - WebGL # Build a HTML playable in browser
     steps:
       # Checkout
-      - name: Checkout repository
+      - name: Checkout repository ⤵️
         uses: actions/checkout@v2
         with:
-          lfs: false
-
+          lfs: true
       # Cache
-      - uses: actions/cache@v2
+      - name: Cache library 💾
+        uses: actions/cache@v1.1.0
         with:
-          path: Library
-          key: Library-${{ hashFiles('Assets/**', 'Packages/**', 'ProjectSettings/**') }}
+          path: ${{ matrix.projectPath }}/Library
+          key: Library-${{ matrix.projectPath }}-${{ matrix.targetPlatform }}
           restore-keys: |
+            Library-${{ matrix.projectPath }}-
             Library-
-
-      # Test
-      - name: Run tests
-        uses: game-ci/unity-test-runner@v2
-        env:
-          UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
-        with:
-          githubToken: ${{ secrets.GITHUB_TOKEN }}
-
       # Build
-      - name: Build project
-        uses: game-ci/unity-builder@v2
-        env:
-          UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
+      - name: Build project 🚧
+        uses: webbertakken/unity-builder@v0.10
         with:
-          targetPlatform: WebGL
+          projectPath: ${{ matrix.projectPath }}
+          unityVersion: ${{ matrix.unityVersion }}
+          targetPlatform: ${{ matrix.targetPlatform }}
 
       # Output
-      - uses: actions/upload-artifact@v2
+      - name: Upload build ⤴️
+        uses: actions/upload-artifact@v2
         with:
           name: Build
           path: build
+          # ls ./build --> StandaloneOSX/ StandaloneWindows64/ ... WebGL
+
+  deployOSX:
+    name: Deploy OsX App to itch.io 📤
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download builds ⤵️
+        uses: actions/download-artifact@v2
+        with:
+          name: Build
+      - name: Display structure of downloaded files
+        run: ls -R
+      - name: Deploy OSX app to itch.io
+        uses: josephbmanley/butler-publish-itchio-action@master
+        env:
+          BUTLER_CREDENTIALS: ${{ secrets.BUTLER_CREDENTIALS }}
+          CHANNEL: osx
+          ITCH_GAME: looper
+          ITCH_USER: avivajpeyi
+          PACKAGE: StandaloneOSX
+
+  deployLinux:
+    name: Deploy Linux App to itch.io 📤
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download builds ⤵️
+        uses: actions/download-artifact@v2
+        with:
+          name: Build
+      - name: Display structure of downloaded files
+        run: ls -R
+      - name: Deploy linux app to itch.io
+        uses: josephbmanley/butler-publish-itchio-action@master
+        env:
+          BUTLER_CREDENTIALS: ${{ secrets.BUTLER_CREDENTIALS }}
+          CHANNEL: linux
+          ITCH_GAME: looper
+          ITCH_USER: avivajpeyi
+          PACKAGE: StandaloneLinux64
+
+
+  deployWindows:
+    name: Deploy Windows App to itch.io 📤
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download builds ⤵️
+        uses: actions/download-artifact@v2
+        with:
+          name: Build
+      - name: Display structure of downloaded files
+        run: ls -R
+      - name: Deploy windows app to itch.io
+        uses: josephbmanley/butler-publish-itchio-action@master
+        env:
+          BUTLER_CREDENTIALS: ${{ secrets.BUTLER_CREDENTIALS }}
+          CHANNEL: windows
+          ITCH_GAME: looper
+          ITCH_USER: avivajpeyi
+          PACKAGE: StandaloneWindows64
+
+  deployHTML:
+    name: Deploy HTML App to itch.io 📤
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download builds ⤵️
+        uses: actions/download-artifact@v2
+        with:
+          name: Build
+      - name: Display structure of downloaded files
+        run: ls -R
+      - name: Deploy HTML build to itch.io
+        uses: josephbmanley/butler-publish-itchio-action@master
+        env:
+          BUTLER_CREDENTIALS: ${{ secrets.BUTLER_CREDENTIALS }}
+          CHANNEL: html5
+          ITCH_GAME: looper
+          ITCH_USER: avivajpeyi
+          PACKAGE: WebGL
